Fixed spacing issues, list issue, footer issue, link target

--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
     background-size: cover;
     background-attachment: fixed, fixed;
     min-height: 100vh;
+
 }
 
 .bg-primary-accent {
@@ -48,7 +49,7 @@ a:hover {
 }
 
 .button:hover {
-    color: #ffffff;
+    text-decoration: underline;
 }
 
 hr {
@@ -102,7 +103,7 @@ ul.navbar-nav > li {
 
 .section-wrapper {
     background-color: transparent;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 section {
@@ -113,7 +114,7 @@ section {
 .card {
     border: none;
     border-radius: 0;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 .card:last-of-type {
@@ -159,11 +160,11 @@ section {
 }
 
 .divider-card {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .divider-section {
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 section.section-wrapper.visible-background {
@@ -241,15 +242,7 @@ section h3 {
     background-color: rgb(10, 65, 158);
     color: #ffffff;
     padding: 10px 15px;
-    margin-bottom: 10px;
-}
-
-.no-indent h1 {
-    margin-bottom: 0;
-}
-
-.no-indent h1:last-of-type {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 section ul, section ol {
@@ -289,7 +282,7 @@ section ul.articles-list li:last-child {
 .section-divider {
 	background-color: transparent;
 	text-align: center;
-    margin: 30px 0;
+    margin: 40px 0;
 }
 
 #archive-button {
@@ -307,7 +300,7 @@ ol.author-guideline-main-list {
 
 ol.author-guideline-main-list > li {
     counter-increment: root;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 ol.author-guideline-main-list > li ol {
@@ -341,9 +334,6 @@ ol.author-guideline-main-list .card-body > ol > li {
 
 ol.author-guideline-main-list > li .card-body > ol > li::before {
     content: counter(root) "." counter(subsection) ". ";
-    float: left;
-    margin-right: 5px;
-    padding: 0;
 }
 
 ol.author-guideline-main-list .card-body > ol > li > ol > li {
@@ -453,8 +443,12 @@ footer ul li a:hover {
     color: rgb(231, 142, 35);
 }
 
+#footer-note {
+    text-align: center;
+}
+
 footer p {
-    line-height: 1;
+    line-height: 1.3;
     text-align: center;
     font-size: 80%;
 }
@@ -669,6 +663,14 @@ footer p {
         font-weight: normal;
     }
 
+    ol.author-guideline-main-list .simple .card-header h2::before {
+        content: counter(root, upper-roman) ". ";
+    }
+
+    ol.author-guideline-main-list .card-body > ol > li {
+        padding-left: 20px;
+    }
+
     .large-headers .simple .card-header h2 {
         font-size: 150%;
     }
@@ -690,9 +692,8 @@ footer p {
     }
 
     ol.author-guideline-main-list {
-        list-style-type: upper-roman;
+        list-style-type: none;
         padding-left: 20px;
-        margin-left: 20px;
     }
 
     #archive-button {
@@ -740,7 +741,7 @@ footer p {
     }
 
     footer .footer-wrapper p {
-        padding: 0 150px;
+        padding: 0 120px;
     }
 }
 
@@ -777,11 +778,6 @@ footer p {
 
     .council-container p.council-title {
         font-size: 140%;
-    }
-
-    ol.author-guideline-main-list {
-        padding-left: 25px;
-        margin-left: 25px;
     }
 
     ol.author-guideline-main-list li {
